--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ssa_app">
    <application
-        android:label="ssa_app"
+        android:label="Staff Skill Auditor"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
