--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   flutter_iconpicker: ^3.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
