--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "request": "launch",
       "type": "dart",
       "flutterMode": "debug",
-      "deviceId": "iphone",
+      "deviceId": "macOS",
     },
     {
       "name": "iOS (Profile)",
