--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   get: ^4.3.0
+  get_storage: ^2.0.3
   flutter_iconpicker: ^3.0.2
   intl: ^0.17.0
 
